testsuite/tests/properties/invalid_raise/test.out
== bad_rtype/test.lkt ==
test.lkt:4:20: error: Expected type Int, got String
4 |     fun p(): Int = raise[String] PropertyError()
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== no_rtype/test.lkt ==
test.lkt:4:20: error: Return type required (`raise[T]`)
4 |     fun p(): Int = raise PropertyError()
  |                    ^^^^^


== not_exception/test.lkt ==
test.lkt:4:31: error: exception expected, got the type FooNode at common.lkt:9:1
4 |     fun p(): Int = raise[Int] FooNode()
  |                               ^^^^^^^


== not_string/test.lkt ==
test.lkt:4:45: error: static string value expected
4 |     fun p(): Int = raise[Int] PropertyError(1)
  |                                             ^


lkt_compile: Done
